Fix inconsistencies in list spacing in content body and tighten up TOC spacing

--- a/docs/src/css/all.scss
+++ b/docs/src/css/all.scss
@@ -53,6 +53,7 @@ body {
 
 ul {
 	padding-left: 30px;
+	margin-top: 6px;
 	&.table {
 		margin: 0;
 		padding-left: 26.25px;
@@ -61,10 +62,14 @@ ul {
 
 ol {
 	padding-left: 30px;
+	margin-top: 6px;
 }​
 
 li {
 	margin: 0 0 6px 0;
+	&.toc-item {
+		margin: 0 0 3px 0;
+	}
 }
 
 .methodDetail {
@@ -232,7 +237,7 @@ pre {
 .toc-header {
 	font-size: 16px;
 	font-weight: bold;
-	margin-left: 30px;
+	margin: 0 0 5px 30px;
 	text-align: center;
 }
 
@@ -365,7 +370,7 @@ pre {
 
 .toc-body {
 	line-height: 23px;
-	margin: 0 0 5px;
+	margin: 0 0 3px;
 }​
 
 .context-info {
